--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@snazzah/davey": "^0.1.8",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "node-fetch": "^2.7.0",
     "play-dl": "^1.9.7"
   }
