--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
       "!src/bot.js",
       "!src/**/index.js"
     ],
-    "coverageThresholds": {
+    "coverageThreshold": {
       "global": {
         "branches": 60,
         "functions": 60,
